[gd_scene load_steps=7 format=3 uid="uid://cbw6ulhuyuapb"]

[ext_resource type="Script" uid="uid://dkx7bp7q1xldp" path="res://src/Utility/Outdated/DialogBranch.gd" id="1"]

[sub_resource type="Resource" id="Resource_f81jr"]
metadata/__load_path__ = "res://assets/UI/DialogBox.png"

[sub_resource type="Resource" id="Resource_q6xdb"]
metadata/__load_path__ = "res://src/UI/Cave-StoryFont.tres"

[sub_resource type="Resource" id="Resource_sqyg6"]
metadata/__load_path__ = "res://src/UI/Cave-StoryFont.tres"

[sub_resource type="Resource" id="Resource_yi8b6"]
metadata/__load_path__ = "res://src/UI/Cave-StoryFont.tres"

[sub_resource type="Resource" id="Resource_oridy"]
metadata/__load_path__ = "res://src/UI/Cave-StoryFont.tres"

[node name="DialogBranch" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2(92, 31)
script = ExtResource("1")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
offset_left = 320.0
offset_top = 240.0
offset_right = 432.0
offset_bottom = 272.0
pivot_offset = Vector2(189, 26)
texture = SubResource("Resource_f81jr")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="."]
visible = false
offset_left = 328.0
offset_top = 248.0
offset_right = 376.0
offset_bottom = 264.0
theme_override_fonts/font = SubResource("Resource_q6xdb")
text = "Yes"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="."]
visible = false
offset_left = 376.0
offset_top = 248.0
offset_right = 424.0
offset_bottom = 264.0
theme_override_fonts/font = SubResource("Resource_sqyg6")
text = "No"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Talk" type="Button" parent="."]
visible = false
offset_left = 328.0
offset_top = 248.0
offset_right = 376.0
offset_bottom = 264.0
theme_override_fonts/font = SubResource("Resource_yi8b6")
text = "Talk"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ask" type="Button" parent="."]
visible = false
offset_left = 376.0
offset_top = 248.0
offset_right = 424.0
offset_bottom = 264.0
theme_override_fonts/font = SubResource("Resource_oridy")
theme_override_colors/font_color = Color(0.278431, 0.760784, 0.341176, 1)
text = "Ask"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="Yes" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]
[connection signal="focus_entered" from="No" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="No" to="." method="_on_No_pressed"]
[connection signal="focus_entered" from="Talk" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="Talk" to="." method="_on_Talk_pressed"]
[connection signal="focus_entered" from="Ask" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="Ask" to="." method="_on_Ask_pressed"]
